rolling bug logmanager and  file manager